<resources>
    <string name="app_name">MVVM_Hilt</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="search_coroutine_flow">Search coroutine Flow</string>
    <string name="local_database">Local Database</string>
    <string name="detail_fragment">detail fragment</string>
    <string name="detail_activity">detail activity</string>
    <string name="activity_result">activity result</string>
    <string name="data_store">Data Store</string>
    <string name="image_picker">Image picker</string>
    <string name="read_json">Read Json</string>
    <string name="viewpager_with_nested_recycler">ViewPager with nested recycler</string>
    <string name="title">Title</string>
    <string name="price">500.0</string>
    <string name="is_stock">available</string>
    <string name="view_change">viewChange</string>
    <string name="expandable_recyclerview">Expandable recyclerView</string>
    <string name="home">Home</string>
    <string name="music">Music</string>
    <string name="article">Article</string>
    <string name="bottom_navigation">Bottom Navigation</string>
    <string name="google_login">google login</string>
    <string name="bottom_sheet">bottom sheet</string>
    <string name="gps_location_with_permission">GPS location with permission</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="permission_detail">For getting current location please give the location permission</string>
    <string name="result">result</string>
    <string name="network_connection_is_not_available">Network connection is not available</string>
    <string name="add">Add</string>
    <string name="company">Company</string>
    <string name="name">Name</string>
    <string name="lat">Lat : %s</string>
    <string name="lon">Lon : %s</string>
    <string name="parallel_api_call">Parallel api call</string>
    <string name="popular_movie">Popular movie</string>
    <string name="top_rated_movie">Top rated movie</string>
    <string name="recyclerview_paging_3">RecyclerView Paging 3</string>
    <string name="save">Save</string>
    <string name="show_data">Show data</string>
    <string name="city">City :&#160;</string>
    <string name="zipcode">Zipcode :&#160;</string>
    <string name="enter_you_city_name">Enter you city name</string>
    <string name="enter_your_city_zip_code">Enter your city zip code</string>
    <string name="google_map">Google Map</string>
    <string name="custom_marker">custom_marker</string>
    <string name="pagination">Pagination</string>
    <string name="exoplayer_activity">ExoPlayer Activity</string>
    <string name="exoplayer_fragment">ExoPlayer Fragment</string>
    <string name="player_activity_name">Media player</string>
    <string name="media_url_mp3">https://storage.googleapis.com/exoplayer-test-media-0/Jazz_In_Paris.mp3</string>
    <!-- Big Buck Bunny video provided by the Blender Foundation.
    (c) copyright 2008, Blender Foundation / www.bigbuckbunny.org -->
    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
    <string name="media_url_dash"><![CDATA[https://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]></string>
    <string name="logo">Google logo</string>
    <string name="mehedi_hassan_piash">Mehedi Hassan Piash</string>
    <string name="paging3_with_caching">Paging3 with caching</string>
    <string name="single_permission">Single Permission</string>
    <string name="multiple_permission">Multiple Permission</string>
    <string name="permission">Permission</string>
</resources>